Fix pp, cards hover, cards tags wrap, short description size, welcome size and margin; Add an aka

--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -1,6 +1,6 @@
 .timeline {
     position: relative;
-    min-width: 1200px;
+    min-width: 800px;
     width: fit-content;
     margin: 0 auto;
     text-align: start;
